# auto-musk

./: .gitignore  .musk.md  README.md  install.sh  pac.at
backend/: Cargo.toml  README.md
backend/.autoforge/reports/: relay-run-report.md
backend/crates/musk/: Cargo.toml
backend/crates/musk/modes/: basic.at  coding.at  review.at  superpowers.at
backend/crates/musk/src/: app_config.rs  auth.rs  chats.rs  hello.rs  lib.rs  main.rs  mode.rs  server.rs  spec_tools.rs  specs.rs  tool_safety.rs  tool_test.rs  tools.rs  workflow.rs
backend/crates/musk/tests/: HELLO_TEST_RESULTS.md  TEST_EXECUTION_REPORT.md  hello_test.rs  ok_file_test.rs  tool_atoms.rs
backend/crates/musk/workflows/: feature-dev.at
designs/: 001-frontend-widget-design.md  002-auto-forge-ai-capability-split.md  003-tool-atom-testing-framework.md  004-tool-safety-layer.md  005-app-harness-organization.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: agents-config-page.vue  app-config-page.vue  config-page.vue  roles-config-page.vue  skills-config-page.vue
plans/: 001-auto-forge-migration-super-plan.md  002-frontend-framework-plan.md  003-musk-mvp-rust-backend.md  004-tool-set-expansion.md  005-streaming-chat.md  006-more-skills.md  007-a2vm-pnpm-fix-tracking.md  008-chats-web-app-and-cli-config.md  009-parity-roadmap-vs-auto-forge.md  010-ui-port-from-auto-forge.md  auto-lang-upstream-tasks.md
skills/brainstorming/: SKILL.md
skills/executing-plans/: SKILL.md
skills/requesting-code-review/: SKILL.md
skills/systematic-debugging/: SKILL.md
skills/test-driven-development/: SKILL.md
skills/verification-before-completion/: SKILL.md
skills/writing-plans/: SKILL.md
src/back/: api.at  db.at  specs.at  specs_test.at
src/front/: app.at  nav_rail.at
src/front/pages/: chats.at  config.at  explorer.at  login.at  relay.at  specs.at
web/: e2e.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-legacy/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web-legacy/src/: App.vue
web-legacy/src/composables/: useSpecs.ts
web-legacy/src/views/: ChatsView.vue
web/src/: App.vue  main.ts  styles.css
web/src/components/: AgentAvatar.vue  AutoLinkContent.vue  ConfirmDeleteDialog.vue  DropZone.vue  GateBanner.vue  GateCard.vue  GatePanel.vue  GoalDetailModal.vue  MarkdownContent.vue  MentionDropdown.vue  MuskIcon.vue  QuestionnaireCard.vue  RelationsPanel.vue  ReportCard.vue  SecretaryMessage.vue  SegmentedProgressBar.vue  SettingsMenu.vue  SpecItemDetail.vue  SpecItemRow.vue  SpecLink.vue  StatusBadge.vue  StatusTransition.vue  StreamingRenderer.vue  StreamingTable.vue  TaskPlanPanel.vue  TreeView.vue
web/src/composables/: useAccentColor.ts  useAgentConfigs.ts  (+17 more)
(+36 files in other folders)
