[package]
name = "musk"
version = "0.1.0"
edition = "2021"
description = "auto-musk — Forge-successor AI coding agent (Rust backend)"

[[bin]]
name = "musk"
path = "src/main.rs"

[lib]
name = "musk"
path = "src/lib.rs"

[dependencies]
# auto-ai-agent 提供 Profession/Agent/Workflow(经它间接依赖 auto-ai-client/ai-config)
auto-ai-agent = { path = "../../../../auto-ai/crates/auto-ai-agent" }
# daemon 发现/调用(auto-ai-agent 已重导出,但直接依赖更清晰)
auto-ai-client = { path = "../../../../auto-ai/crates/auto-ai-client" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP server (musk serve — frontend talks to this on :8080)
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
async-stream = "0.3"
futures = "0.3"
# Auth (MVP: SHA-256 password hashing + random session tokens)
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
dirs = "5"
glob = "0.3"
# spec ID scanning for rebuild_relations (e.g. G1, A3, auth-S1.1)
regex = "1"
# auto-atom parser(for mode .at config parsing)
auto-atom = { path = "../../../../auto-lang/crates/auto-atom" }
auto-val = { path = "../../../../auto-lang/crates/auto-val" }
# temp dir for the tool-test framework (Design 003); also used by chats tests
tempfile = "3"

[dev-dependencies]
# tools 单元测试用 #[tokio::test]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
# 副作用工具测试串行(chdir 全局状态,不能并行)
serial_test = "3"
